# sound-realty-challenge

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: cml.yaml  python-app.yml
app/: main.py  models.py
app/tests/: test_app.py
experiments/: api_test_script.py  conda_environment.yml  create_model.py  experiment_requirements.txt
experiments/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
experiments/catboost_info/learn/: events.out.tfevents
