[tool.poetry]
name = "api-ml-sound-realty"
version = "0.1.0"
description = "Housing Prices ML Regression API"
authors = ["Mateus Cichelero <eng.cichelero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.1.1"
scikit-learn = "1.3.1"
fastapi = "^0.100.0"
uvicorn = "^0.27.1"
requests = "^2.31.0"
httpx = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"